[d3-chart] added grouped values support

--- a/semcore/d3-chart/src/a11y/translations/view/en.json
+++ b/semcore/d3-chart/src/a11y/translations/view/en.json
@@ -6,8 +6,10 @@
   "entity-type-clusters-label-anonymous": "{relativeSize} cluster of {size} size around cross of {x} {xLabel} and {y} {yLabel}",
   "entity-type-clusters-label": "{relativeSize} cluster {labels} of {size} size around cross of {x} {xLabel} and {y} {yLabel}",
   "entity-type-values": "{count} {count, plural, one {value} other {values}}",
+  "entity-type-grouped-values": "{groupsCount} {groupsCount, plural, one {group of {valuesCount} {valuesCount, plural, one {value} other {values}}} other {groups of size from {minValuesCount} to {maxValuesCount} values}}",
   "value-labeled": "{label} of value {value}",
   "value": "{value}",
+  "values-group": "group {label} contains {values}",
   "additional-axe": "{label} represented from {from} to {to}.",
   "additional-axe-no-label": "Data represented from {from} to {to}.",
   "time-series-detailed-trend": "{general}, also {locals}",
