[chore, d3-chart] set i18n up in repo

--- a/semcore/d3-chart/src/a11y/translations/module/en.json
+++ b/semcore/d3-chart/src/a11y/translations/module/en.json
@@ -1,5 +1,5 @@
 {
   "disabled": "Enable data accessibility module for graphical charts",
-  "loading": "Loading accessability module",
-  "failed": "Failed to load accessability module. Contact service user support to help us resolve issue faster"
+  "loading": "Loading accessibility module",
+  "failed": "Failed to load accessibility module. Contact service user support to help us resolve issue faster"
 }
