[d3-chart] fixed non-translatable i18n strings

--- a/semcore/d3-chart/src/a11y/translations/view/en.json
+++ b/semcore/d3-chart/src/a11y/translations/view/en.json
@@ -2,11 +2,13 @@
   "chart-summary": "Chart represents {entities} of {label}: {entitiesList}.",
   "chart-summary-no-label": "Chart represents {entities}: {entitiesList}.",
   "entity-type-time-series": "{count} time series",
-  "entity-type-clusters": "{count} {count, plural, one {cluster of size {maxSize}} other {clusters of sizes from {minSize} to {maxSize}}}",
+  "entity-type-clusters-single-size": "{count} {count, plural, one {cluster} other {clusters}} of size {size}",
+  "entity-type-clusters-multiple-size": "{count} {count, plural, one {cluster} other {clusters}} of sizes from {minSize} to {maxSize}",
   "entity-type-clusters-label-anonymous": "{relativeSize} cluster of {size} size around cross of {x} {xLabel} and {y} {yLabel}",
   "entity-type-clusters-label": "{relativeSize} cluster {labels} of {size} size around cross of {x} {xLabel} and {y} {yLabel}",
   "entity-type-values": "{count} {count, plural, one {value} other {values}}",
-  "entity-type-grouped-values": "{groupsCount} {groupsCount, plural, one {group of {valuesCount} {valuesCount, plural, one {value} other {values}}} other {groups of size from {minValuesCount} to {maxValuesCount} values}}",
+  "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} {valuesCount} {valuesCount, plural, one {value} other {values}}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values}",
   "value-labeled": "{label} of value {value}",
   "values-group": "group {label} contains {values}",
   "additional-axe": "{label} represented from {from} to {to}.",
