--- a/semcore/d3-chart/src/a11y/translations/view/source.csv
+++ b/semcore/d3-chart/src/a11y/translations/view/source.csv
@@ -1,17 +1,19 @@
 identifier,source_phrase,context,translation
 chart-summary, "Chart represents {entities} of {label}: {entitiesList}.", "e.g. Chart represents 5 trends of gold price: first trend grows from X to Y..."
 chart-summary-no-label, "Chart represents {entities}: {entitiesList}.", "e.g. Chart represents 5 trends: first trend grows from X to Y..."
-entity-type-time-series, "{count} time series",""
-entity-type-clusters, "{count} {count, plural, one {cluster of size {maxSize}} other {clusters of sizes from {minSize} to {maxSize}}}", "e.g. 10 clusters of sizes from 5 to 15"
+entity-type-time-series, "{count} time series", "e.g. 5 time series (Time series here means data set represented on linear chart)"
+entity-type-clusters-single-size, "{count} {count, plural, one {cluster} other {clusters}} of size {size}", "e.g. 10 clusters of size 20"
+entity-type-clusters-multiple-size, "{count} {count, plural, one {cluster} other {clusters}} of sizes from {minSize} to {maxSize}", "e.g. 10 clusters of sizes from 5 to 15"
 entity-type-clusters-label-anonymous, "{relativeSize} cluster of {size} size around cross of {x} {xLabel} and {y} {yLabel}", "e.g. significantly small cluster of 5 size around cross of May 25 and 50 price"
 entity-type-clusters-label, "{relativeSize} cluster {labels} of {size} size around cross of {x} {xLabel} and {y} {yLabel}", "e.g. significantly small cluster FAANG of 5 size around cross of May 25 and 50 price"
 entity-type-values, "{count} {count, plural, one {value} other {values}}",""
-entity-type-grouped-values, "{groupsCount} {groupsCount, plural, one {group of {valuesCount} {valuesCount, plural, one {value} other {values}}} other {groups of size from {minValuesCount} to {maxValuesCount} values}}", "5 groups of size from 3 to 8 values"
-value-labeled, "{label} of value {value}, May be used in cases like: Blue Container of 5 rabbits", "Red Box of 3 turkeys and Black Box of unknown creature.   "
+entity-type-grouped-values-single-size, "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} {valuesCount} {valuesCount, plural, one {value} other {values}}", "e.g. 5 groups each containing 8 values"
+entity-type-grouped-values-multiple-size, "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values}", "e.g. 5 groups each containing from 3 to 8 values"
+value-labeled, "{label} of value {value}, May be used in cases like: Blue Container of 5 rabbits", "e.g. Red Box of 3 turkeys and Black Box of unknown creature."
 values-group, "group {label} contains {values}", "May be used in cases like: group animals contains 5 rabbits and 3 turkeys, group machines contains 2 engines and mecha and group vehicles contains dragon and 3 broomsticks."
 additional-axe, "{label} represented from {from} to {to}.", "e.g. Stocks represented from May 1 to May 25"
 additional-axe-no-label, "Data represented from {from} to {to}.", "e.g. Data represented from May 1 to May 25"
-time-series-detailed-trend, "{general}, also {locals}, e.g. Data growing", "also from May 1 to May 25 declining"
+time-series-detailed-trend, "{general}, also {locals}", "e.g. Data growing, also from May 1 to May 25 declining"
 time-series-general-trend, "{dataKey} {trend} from {from} to {to}", "e.g. Price growing from May 1 to May 25"
 time-series-local-trend, "{trend} from {from} to {to}", "e.g. growing from May 1 to May 25"
 trend-strong-reduction, "strongly declining", "Describes a time series trend on chart when Y axis moves down very fast  "
