[d3-chart] refactored summarizer to fully follow philosophy of hints optionnality (especially for value sets and gropped values data)

--- a/semcore/d3-chart/src/a11y/translations/view/en.json
+++ b/semcore/d3-chart/src/a11y/translations/view/en.json
@@ -8,11 +8,11 @@
   "entity-type-clusters-label": "{relativeSize} cluster {labels} of {size} size around cross of {x} {xLabel} and {y} {yLabel}",
   "entity-type-values": "{count} {count, plural, one {value} other {values}}",
   "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} {valuesCount} {valuesCount, plural, one {value} other {values}}",
-  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values",
   "value-labeled": "{label} of value {value}",
   "values-group": "group {label} contains {values}",
-  "additional-axe": "{label} represented from {from} to {to}.",
-  "additional-axe-no-label": "Data represented from {from} to {to}.",
+  "additional-axe": "{label} represented from {from} to {to}",
+  "additional-axe-no-label": "Data represented from {from} to {to}",
   "time-series-detailed-trend": "{general}, also {locals}",
   "time-series-general-trend": "{dataKey} {trend} from {from} to {to}",
   "time-series-local-trend": "{trend} from {from} to {to}",
