--- a/semcore/d3-chart/src/a11y/translations/view/source.csv
+++ b/semcore/d3-chart/src/a11y/translations/view/source.csv
@@ -8,11 +8,11 @@ entity-type-clusters-label-anonymous, "{relativeSize} cluster of {size} size aro
 entity-type-clusters-label, "{relativeSize} cluster {labels} of {size} size around cross of {x} {xLabel} and {y} {yLabel}", "e.g. significantly small cluster FAANG of 5 size around cross of May 25 and 50 price"
 entity-type-values, "{count} {count, plural, one {value} other {values}}",""
 entity-type-grouped-values-single-size, "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} {valuesCount} {valuesCount, plural, one {value} other {values}}", "e.g. 5 groups each containing 8 values"
-entity-type-grouped-values-multiple-size, "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values}", "e.g. 5 groups each containing from 3 to 8 values"
+entity-type-grouped-values-multiple-size, "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values", "e.g. 5 groups each containing from 3 to 8 values"
 value-labeled, "{label} of value {value}, May be used in cases like: Blue Container of 5 rabbits", "e.g. Red Box of 3 turkeys and Black Box of unknown creature."
 values-group, "group {label} contains {values}", "May be used in cases like: group animals contains 5 rabbits and 3 turkeys, group machines contains 2 engines and mecha and group vehicles contains dragon and 3 broomsticks."
-additional-axe, "{label} represented from {from} to {to}.", "e.g. Stocks represented from May 1 to May 25"
-additional-axe-no-label, "Data represented from {from} to {to}.", "e.g. Data represented from May 1 to May 25"
+additional-axe, "{label} represented from {from} to {to}", "e.g. Stocks represented from May 1 to May 25"
+additional-axe-no-label, "Data represented from {from} to {to}", "e.g. Data represented from May 1 to May 25"
 time-series-detailed-trend, "{general}, also {locals}", "e.g. Data growing, also from May 1 to May 25 declining"
 time-series-general-trend, "{dataKey} {trend} from {from} to {to}", "e.g. Price growing from May 1 to May 25"
 time-series-local-trend, "{trend} from {from} to {to}", "e.g. growing from May 1 to May 25"
