--- a/semcore/errors/src/AccessDenied/translations/es.json
+++ b/semcore/errors/src/AccessDenied/translations/es.json
@@ -1,5 +1,5 @@
 {
   "title": "Has encontrado la página secreta",
   "text": "Te faltan los permisos de administrador necesarios para acceder a esta página. Vuelve a la página anterior o visita nuestra página de inicio. ",
-  "btnHome": "Visitar la página de inicio"
+  "btnHome": "Ir a la página de inicio"
 }
