--- a/semcore/errors/src/Maintenance/translations/it.json
+++ b/semcore/errors/src/Maintenance/translations/it.json
@@ -1,5 +1,5 @@
 {
-  "title": "è in fase di manutenzione",
+  "title": "è in manutenzione",
   "text": "Stiamo facendo del nostro meglio per ripristinarla il prima possibile. Torna in un secondo momento.",
-  "btnHome": "Visita homepage"
+  "btnHome": "Vai alla homepage"
 }
