--- a/semcore/errors/src/Maintenance/translations/ja.json
+++ b/semcore/errors/src/Maintenance/translations/ja.json
@@ -1,5 +1,5 @@
 {
-  "title": "現在メンテナンス中です。",
+  "title": "は現在メンテナンス中",
   "text": "できるだけ早く修正するために最善を尽くしています。後ほど再試行してください。",
-  "btnHome": "ホームページを閲覧"
+  "btnHome": "ホームページに行く"
 }
