--- a/semcore/errors/src/PageNotFound/translations/it.json
+++ b/semcore/errors/src/PageNotFound/translations/it.json
@@ -1,5 +1,5 @@
 {
-  "title": "Pagina non trovata",
-  "text": "Impossibile trovare la pagina che stai cercando. Puoi tornare alla pagina precedente o visitare la nostra homepage.",
-  "btnHome": "Visita homepage"
+  "title": "Ci siamo persi",
+  "text": "Sembra che questa pagina non esista. Prova a tornare indietro o clicca il pulsante sottostante e ti riporteremo alla homepage.",
+  "btnHome": "Vai alla homepage"
 }
