--- a/semcore/errors/src/PageNotFound/translations/ko.json
+++ b/semcore/errors/src/PageNotFound/translations/ko.json
@@ -1,5 +1,5 @@
 {
-  "title": "페이지를 찾을 수 없음",
-  "text": "찾고 계신 페이지를 찾을 수 없습니다. 이전 페이지로 돌아가거나 Semrush 홈페이지로 이동하세요.",
+  "title": "오류가 발생했습니다",
+  "text": "존재하지 않는 페이지입니다. 뒤로 돌아가거나 아래 버튼을 클릭해 홈으로 이동하세요.",
   "btnHome": "홈페이지로 이동"
 }
