--- a/semcore/errors/src/PageNotFound/translations/pt.json
+++ b/semcore/errors/src/PageNotFound/translations/pt.json
@@ -1,5 +1,5 @@
 {
-  "title": "Página não encontrada",
-  "text": "Não foi possível localizar a página que você está procurando. Você pode retornar para a página anterior ou acessar a página inicial.",
+  "title": "Nos perdemos",
+  "text": "Parece que esta página não existe. Tente voltar ou clique no botão abaixo para ir à página inicial.",
   "btnHome": "Acessar página inicial"
 }
