--- a/semcore/errors/src/PageNotFound/translations/vi.json
+++ b/semcore/errors/src/PageNotFound/translations/vi.json
@@ -1,5 +1,5 @@
 {
   "title": "Không tìm thấy trang",
-  "text": "Rất tiếc, chúng tôi không thể tìm thấy trang bạn đang tìm kiếm. Bạn có thể quay lại trang trước hoặc truy cập đến trang chủ.",
-  "btnHome": "Truy cập vào trang chủ"
+  "text": "Có vẻ như trang này không tồn tại. Hãy thử quay lại hoặc nhấp vào nút bên dưới và chúng tôi sẽ đưa bạn về nhà.",
+  "btnHome": "Đi đến Trang chủ"
 }
