--- a/semcore/errors/src/PageNotFound/translations/zh.json
+++ b/semcore/errors/src/PageNotFound/translations/zh.json
@@ -1,5 +1,5 @@
 {
-  "title": "找不到页面",
-  "text": "我们找不到您要查找的页面。您可以返回到上一页或访问主页。",
-  "btnHome": "访问主页"
+  "title": "我们迷路了",
+  "text": "此页面似乎并不存在。请尝试返回或点击下方的按钮，我们将带您前往正确的位置。",
+  "btnHome": "前往主页"
 }
