--- a/semcore/errors/src/AccessDenied/translations/it.json
+++ b/semcore/errors/src/AccessDenied/translations/it.json
@@ -1,5 +1,5 @@
 {
   "title": "Hai trovato la pagina segreta",
   "text": "Ti mancano i permessi da amministratore per accedere a questa pagina. Torna alla pagina precedente o visita la nostra homepage. ",
-  "btnHome": "Visita homepage"
+  "btnHome": "Vai alla homepage"
 }
