--- a/semcore/errors/src/AccessDenied/translations/vi.json
+++ b/semcore/errors/src/AccessDenied/translations/vi.json
@@ -1,5 +1,5 @@
 {
   "title": "Bạn vừa tìm ra một trang ẩn",
   "text": "Bạn không được cấp quyền xem trang này. Quay trở tại trang trước hoặc tham khảo trang chủ của chúng tôi. ",
-  "btnHome": "Truy cập vào trang chủ"
+  "btnHome": "Đi đến Trang chủ"
 }
