--- a/semcore/errors/src/Maintenance/translations/de.json
+++ b/semcore/errors/src/Maintenance/translations/de.json
@@ -1,5 +1,5 @@
 {
-  "title": "wird zurzeit gewartet",
+  "title": "wird derzeit gewartet",
   "text": "Wir bemühen uns, das Problem so bald wie möglich zu beheben. Bitte versuchen Sie es später wieder.",
-  "btnHome": "Homepage besuchen"
+  "btnHome": "Zur Homepage"
 }
