--- a/semcore/errors/src/Maintenance/translations/es.json
+++ b/semcore/errors/src/Maintenance/translations/es.json
@@ -1,5 +1,5 @@
 {
-  "title": "está actualizándose",
+  "title": "en mantenimiento",
   "text": "Estamos haciendo todo lo posible para solucionarlo rápidamente. Por favor, visítanos en otro momento.",
-  "btnHome": "Visitar la página de inicio"
+  "btnHome": "Ir a la página de inicio"
 }
