--- a/semcore/errors/src/Maintenance/translations/fr.json
+++ b/semcore/errors/src/Maintenance/translations/fr.json
@@ -1,5 +1,5 @@
 {
-  "title": "est actuellement en cours de maintenance",
+  "title": "est en cours de maintenance",
   "text": "Nous faisons tout notre possible pour résoudre ce problème dès que possible. Veuillez revenir plus tard.",
-  "btnHome": "Vers la page d’accueil"
+  "btnHome": "Vers la page d'accueil"
 }
