--- a/semcore/errors/src/Maintenance/translations/pt.json
+++ b/semcore/errors/src/Maintenance/translations/pt.json
@@ -1,5 +1,5 @@
 {
-  "title": "está passando por manutenção",
+  "title": "está em manutenção",
   "text": "Estamos fazendo o melhor para corrigir o problema o mais rápido possível. Volte mais tarde.",
   "btnHome": "Acessar página inicial"
 }
