--- a/semcore/errors/src/Maintenance/translations/vi.json
+++ b/semcore/errors/src/Maintenance/translations/vi.json
@@ -1,5 +1,5 @@
 {
-  "title": "đang trong giai đoạn bảo trì",
+  "title": "đang bảo trì",
   "text": "Chúng tôi đang cố gắng để khắc phục sự cố này trong thời gian sớm nhất. Vui lòng quay lại sau.",
-  "btnHome": "Truy cập vào trang chủ"
+  "btnHome": "Đi đến Trang chủ"
 }
