--- a/semcore/errors/src/PageNotFound/translations/ja.json
+++ b/semcore/errors/src/PageNotFound/translations/ja.json
@@ -1,5 +1,5 @@
 {
-  "title": "ページが見つかりませんでした。",
-  "text": "お探しのページが見つかりません。前のページに戻るか、ホームページを閲覧できます。",
-  "btnHome": "ホームページを閲覧"
+  "title": "分からなくなりました",
+  "text": "このページが存在していないようです。戻ってみるか、下のボタンをクリックしてください。",
+  "btnHome": "ホームページに行く"
 }
