--- a/semcore/d3-chart/src/a11y/translations/module/vi.json
+++ b/semcore/d3-chart/src/a11y/translations/module/vi.json
@@ -1,5 +1,5 @@
 {
-  "disabled": "Press \"Tab\" to enable graphical charts accessibility module.",
-  "loading": "Loading accessibility module.",
-  "failed": "Failed to load accessibility module. Contact service user support to help us resolve issue faster."
+  "disabled": "Nhấn \"Tab\" để bật mô-đun trợ năng biểu đồ đồ họa.",
+  "loading": "Đang tải mô-đun trợ năng.",
+  "failed": "Không tải được mô-đun trợ năng. Liên hệ với bộ phận hỗ trợ người dùng dịch vụ để giúp chúng tôi giải quyết vấn đề nhanh hơn."
 }
