--- a/semcore/d3-chart/src/a11y/translations/view/fr.json
+++ b/semcore/d3-chart/src/a11y/translations/view/fr.json
@@ -9,10 +9,10 @@
   "entity-type-values": "{count} {count, plural, one {valeur} other {valeurs}}",
   "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, one {groupe contenant} other {groupes contenant chacun}} {valuesCount} {valuesCount, plural, one {valeur} other {valeurs}}",
   "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {groupe contenant} other {groupes contenant chacun}} de {minValuesCount} à {maxValuesCount} valeurs",
-  "value-labeled": "{label} of value {value}",
+  "value-labeled": "{label} de valeur {value}",
   "values-group": "le groupe {label} contient {values}",
   "additional-axe": "{label} représenté de {from} à {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe-no-label": "données représentées du {from} au {to}",
   "time-series-detailed-trend": "{general}, également {locals}",
   "time-series-general-trend": "{dataKey} {trend} du {from} au {to}",
   "time-series-local-trend": "{trend} du {from} au {to}",
