--- a/semcore/d3-chart/src/a11y/translations/view/it.json
+++ b/semcore/d3-chart/src/a11y/translations/view/it.json
@@ -8,11 +8,11 @@
   "entity-type-clusters-label": "Cluster {labels} {relativeSize} di dimensione {size} nell'intersezione tra {x} {xLabel} e {y} {yLabel}",
   "entity-type-values": "{count} {count, plural, one {valore} other {valori}}",
   "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, one {gruppo contenente} other {gruppi contenenti ciascuno}} {valuesCount} {valuesCount, plural, one {valore} other {valori}}",
-  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values",
-  "value-labeled": "{label} of value {value}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {gruppo contenente} other {gruppi contenenti ciascuno}} da {minValuesCount} a {maxValuesCount}",
+  "value-labeled": "{label} di valore {value}",
   "values-group": "il gruppo {label} contiene {values}",
-  "additional-axe": "{label} represented from {from} to {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe": "Rappresentazione di {label} dal {from} al {to}",
+  "additional-axe-no-label": "dati rappresentati dal {from} al {to}",
   "time-series-detailed-trend": "{general}, inoltre {locals}",
   "time-series-general-trend": "{dataKey} {trend} dal {from} al {to}",
   "time-series-local-trend": "{trend} dal {from} al {to}",
