--- a/semcore/d3-chart/src/a11y/translations/view/ja.json
+++ b/semcore/d3-chart/src/a11y/translations/view/ja.json
@@ -8,11 +8,11 @@
   "entity-type-clusters-label": "{x}{xLabel}と{y}{yLabel}の交差地点の辺りに{size}サイズの{relativeSize}クラスター{labels}",
   "entity-type-values": "{count} {count, plural, one {値} other {値}}",
   "entity-type-grouped-values-single-size": "{groupsCount}{groupsCount, plural, one {グループは以下を含む：} other {グループはそれぞれ以下を含む：}} {valuesCount}{valuesCount, plural, one {値} other {値}}",
-  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values",
-  "value-labeled": "{label} of value {value}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount}{groupsCount, plural, one {グループは以下を含む：} other {グループはそれぞれ以下を含む：}}{minValuesCount}から{maxValuesCount}までの値",
+  "value-labeled": "値{value}の{label}",
   "values-group": "{values}を含むグループ{label}",
-  "additional-axe": "{label} represented from {from} to {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe": "{from}から{to}までを代表する{label}",
+  "additional-axe-no-label": "{from}から{to}までを代表するデータ",
   "time-series-detailed-trend": "{general}、また{locals}",
   "time-series-general-trend": "{from}から{to}の{dataKey}{trend}",
   "time-series-local-trend": "{from}から{to}まで{trend}",
