--- a/semcore/d3-chart/src/a11y/translations/view/ko.json
+++ b/semcore/d3-chart/src/a11y/translations/view/ko.json
@@ -8,11 +8,11 @@
   "entity-type-clusters-label": "{x} {xLabel} 및 {y} {yLabel} 지점에 있는 {relativeSize} {size} 사이즈의 {labels} 클러스터",
   "entity-type-values": "{count}개 {count, plural, other {값}}",
   "entity-type-grouped-values-single-size": "{groupsCount}개 {groupsCount, plural, other {그룹 각각에}} {valuesCount}개 {valuesCount, plural, other {값}}",
-  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values",
-  "value-labeled": "{label} of value {value}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount}개 {groupsCount, plural, one {그룹에} other {그룹 각각에}} {minValuesCount} ~ {maxValuesCount} 값",
+  "value-labeled": "{label} {value}",
   "values-group": "{values} 항목이 포함된 {label} 그룹",
-  "additional-axe": "{label} represented from {from} to {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe": "{from}~{to} 동안의 {label}",
+  "additional-axe-no-label": "{from}~{to} 동안의 데이터",
   "time-series-detailed-trend": "{general}, 그리고 {locals}",
   "time-series-general-trend": "{from}~{to} {trend} {dataKey}",
   "time-series-local-trend": "{from}~{to} {trend}",
