--- a/semcore/d3-chart/src/a11y/translations/view/pt.json
+++ b/semcore/d3-chart/src/a11y/translations/view/pt.json
@@ -9,10 +9,10 @@
   "entity-type-values": "{count} {count, plural, one {valor} other {valores}}",
   "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, one {grupo contendo} other {grupos, cada um contendo}} {valuesCount} {valuesCount, plural, one {valor} other {valores}}",
   "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {grupo contendo} other {grupos, cada um contendo}} de {minValuesCount} a {maxValuesCount} valores",
-  "value-labeled": "{label} of value {value}",
+  "value-labeled": "{label} com valor {value}",
   "values-group": "O grupo {label} contém {values}",
   "additional-axe": "Representação de {label} de {from} a {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe-no-label": "dados representados de {from} a {to}",
   "time-series-detailed-trend": "{general}, também {locals}",
   "time-series-general-trend": "{dataKey} {trend} de {from} a {to}",
   "time-series-local-trend": "{trend} de {from} a {to}",
