--- a/semcore/d3-chart/src/a11y/translations/view/tr.json
+++ b/semcore/d3-chart/src/a11y/translations/view/tr.json
@@ -8,11 +8,11 @@
   "entity-type-clusters-label": "{x} {xLabel} ve {y} {yLabel} fiyatı kesişimi civarında {relativeSize} {size} boyutuna sahip {labels} küme",
   "entity-type-values": "{count} {count, plural, one {değerinde} other {değerinde}}",
   "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, one {grup, her biri} other {grup, her biri}} {valuesCount} {valuesCount, plural, one {değerli} other {değerli}}",
-  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values",
-  "value-labeled": "{label} of value {value}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {grup, her biri} other {grup, her biri}} {minValuesCount} ila {maxValuesCount} değerlerinde",
+  "value-labeled": "{value} değerinde {label}",
   "values-group": "Grup {label} {values} içerir",
-  "additional-axe": "{label} represented from {from} to {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe": "{label} {from} ila {to} arasında temsil edilir",
+  "additional-axe-no-label": "{from} ila {to} arasındaki veriler temsil edilir",
   "time-series-detailed-trend": "{general}, aynı zamanda {locals}",
   "time-series-general-trend": "{dataKey} {trend} {from} ila {to}",
   "time-series-local-trend": "{trend} {from} ila {to}",
