--- a/semcore/d3-chart/src/a11y/translations/view/vi.json
+++ b/semcore/d3-chart/src/a11y/translations/view/vi.json
@@ -8,11 +8,11 @@
   "entity-type-clusters-label": "{relativeSize} cụm {labels} size {size} xung quanh {yLabel} của {x} {xLabel} và {y}",
   "entity-type-values": "{count} {count, plural, other {giá trị}}",
   "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, other {mỗi nhóm chứa}} {valuesCount} {valuesCount, plural, other {giá trị}}",
-  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values",
-  "value-labeled": "{label} of value {value}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, other {nhóm chứa}} từ {minValuesCount} tới {maxValuesCount} giá trị",
+  "value-labeled": "{label} có giá trị {value}",
   "values-group": "nhóm {label} chứa {values}",
-  "additional-axe": "{label} represented from {from} to {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe": "{label} từ {from} tới {to}",
+  "additional-axe-no-label": "dữ liệu từ {from} tới {to}",
   "time-series-detailed-trend": "{general}, cũng {locals}",
   "time-series-general-trend": "{dataKey} {trend} từ {from} tới {to}",
   "time-series-local-trend": "{trend} từ {from} tới {to}",
