--- a/semcore/d3-chart/src/a11y/translations/view/zh.json
+++ b/semcore/d3-chart/src/a11y/translations/view/zh.json
@@ -8,11 +8,11 @@
   "entity-type-clusters-label": "大小为 {size} 的{relativeSize}群集{labels}，围绕 {x} {xLabel} 和 {y} {yLabel} 的交叉",
   "entity-type-values": "{count} {count, plural, one {个数值} other {个数值}}",
   "entity-type-grouped-values-single-size": "{groupsCount} 个包含 {valuesCount} 个{valuesCount, plural, one {值} other {值}}的{groupsCount, plural, one {分组} other {分组}}",
-  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values",
-  "value-labeled": "{label} of value {value}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount} 个包含从 {minValuesCount} 到 {maxValuesCount} 数值的{groupsCount, plural, one {分组} other {分组}}",
+  "value-labeled": "{label}，数值为 {value}",
   "values-group": "集合 {label} 包含 {values}",
-  "additional-axe": "{label} represented from {from} to {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe": "从 {from} 到 {to} 的{label}",
+  "additional-axe-no-label": "从 {from} 到 {to} 的数据",
   "time-series-detailed-trend": "{general}，另外 {locals}",
   "time-series-general-trend": "{dataKey} {trend}（从 {from} 到 {to}）",
   "time-series-local-trend": "从 {from} {trend}到 {to}",
