--- a/semcore/d3-chart/src/a11y/translations/module/it.json
+++ b/semcore/d3-chart/src/a11y/translations/module/it.json
@@ -1,5 +1,5 @@
 {
-  "disabled": "Press \"Tab\" to enable graphical charts accessibility module.",
-  "loading": "Loading accessibility module.",
-  "failed": "Failed to load accessibility module. Contact service user support to help us resolve issue faster."
+  "disabled": "Premi \"Tab\" per abilitare il modulo di accessibilità dei dati per i grafici.",
+  "loading": "Caricamento del modulo di accessibilità in corso.",
+  "failed": "Caricamento del modulo di accessibilità non riuscito. Contatta il servizio di assistenza utenti per risolvere il problema più in fretta."
 }
