--- a/semcore/d3-chart/src/a11y/translations/module/ko.json
+++ b/semcore/d3-chart/src/a11y/translations/module/ko.json
@@ -1,5 +1,5 @@
 {
-  "disabled": "Press \"Tab\" to enable graphical charts accessibility module.",
-  "loading": "Loading accessibility module.",
-  "failed": "Failed to load accessibility module. Contact service user support to help us resolve issue faster."
+  "disabled": "'탭'을 누르면 그래픽 차트 접근성 모듈이 활성화됩니다.",
+  "loading": "접근성 모듈 로딩 중.",
+  "failed": "접근성 모듈을 불러오지 못했습니다. 사용자 지원 서비스 팀에 문의하시면 문제를 더 빨리 해결하실 수 있습니다."
 }
