--- a/semcore/d3-chart/src/a11y/translations/module/pt.json
+++ b/semcore/d3-chart/src/a11y/translations/module/pt.json
@@ -1,5 +1,5 @@
 {
-  "disabled": "Press \"Tab\" to enable graphical charts accessibility module.",
-  "loading": "Loading accessibility module.",
-  "failed": "Failed to load accessibility module. Contact service user support to help us resolve issue faster."
+  "disabled": "Pressione \"Tab\" para habilitar o módulo de acessibilidade a gráficos.",
+  "loading": "Carregando módulo de acessibilidade.",
+  "failed": "Falha ao carregar o módulo de acessibilidade. Entre em contato com o suporte ao usuário do serviço para nos ajudar a resolver o problema com mais rapidez."
 }
