--- a/semcore/d3-chart/src/a11y/translations/view/de.json
+++ b/semcore/d3-chart/src/a11y/translations/view/de.json
@@ -8,11 +8,11 @@
   "entity-type-clusters-label": "{relativeSize} Cluster {labels} der Größe {size} um den Schnittpunkt von {x} {xLabel} und {y} {yLabel}",
   "entity-type-values": "{count} {count, plural, one {Wert} other {Werte}}",
   "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, one {Gruppe mit } other {Gruppen mit je}} {valuesCount} {valuesCount, plural, one {Wert} other {Werten}}",
-  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {group containing} other {groups each containing}} from {minValuesCount} to {maxValuesCount} values",
-  "value-labeled": "{label} of value {value}",
+  "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {Gruppe mit} other {Gruppen mit je}} {minValuesCount} bis {maxValuesCount} Werten",
+  "value-labeled": "{label} mit dem Wert {value}",
   "values-group": "Gruppe {label} enthält {values}",
-  "additional-axe": "{label} represented from {from} to {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe": "{label} dargestellt {from} bis {to}",
+  "additional-axe-no-label": "daten dargestellt von {from} bis {to}",
   "time-series-detailed-trend": "{general} sowie {locals}",
   "time-series-general-trend": "{dataKey} {trend} von {from} bis {to}",
   "time-series-local-trend": "{trend} von {from} bis {to}",
@@ -34,7 +34,7 @@
   "view-default-plot-label": "Chart",
   "view-label": "Daten zu {plotLabel}",
   "view-close": "Schließen",
-  "view-skip-plot": "Skip to content after plot",
+  "view-skip-plot": "Zum Content unter der Grafik springen",
   "view-go-to-table": "Zur Datentabelle springen",
   "view-data-summary": "Zusammenfassung der Daten",
   "view-summary-placeholder": "Zusammenfassung der Chart-Daten wird erstellt",
