--- a/semcore/d3-chart/src/a11y/translations/view/es.json
+++ b/semcore/d3-chart/src/a11y/translations/view/es.json
@@ -9,10 +9,10 @@
   "entity-type-values": "{count} {count, plural, one {valor} other {valores}}",
   "entity-type-grouped-values-single-size": "{groupsCount} {groupsCount, plural, one {grupo que contiene} other {grupos que contienen }} {valuesCount} {valuesCount, plural, one {valor} other {valores}}",
   "entity-type-grouped-values-multiple-size": "{groupsCount} {groupsCount, plural, one {groupo que contiene} other {groupos que contienen}} de {minValuesCount} a {maxValuesCount} valores",
-  "value-labeled": "{label} of value {value}",
+  "value-labeled": "{label} de valor {value}",
   "values-group": "grupo {label} contiene {values}",
   "additional-axe": "{label} representada desde {from} a {to}",
-  "additional-axe-no-label": "data represented from {from} to {to}",
+  "additional-axe-no-label": "datos representados de {from} a {to}",
   "time-series-detailed-trend": "{general}, también {locals}",
   "time-series-general-trend": "{dataKey} {trend} desde {from} a {to}",
   "time-series-local-trend": "{trend} desde {from} a {to}",
